--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>THE APP: A Coding Project By Riley MacNeill</title>
+    <title>FLIPPER: A Coding Project By Riley MacNeill</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,10 +14,10 @@
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/img/favicon-32x32.png" <!-- Convert this to an external style sheet -->
     <link href="/css/prism.css" rel="stylesheet">
-    <!--Black Ops One-->
+    <!--Orelega One-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet"></head>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="/img/favicon-32x32.png" height="24" width="30"
-                    class="d-inline-block align-text-top">&nbsp;THE APP</a>
+                    class="d-inline-block align-text-top">&nbsp;FLIPPER</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
