The Code - Wording
Updated the paragraphs on how the JS works

--- a/code.html
+++ b/code.html
@@ -131,7 +131,7 @@ function displayNumbers(numbers) {
                     <p>The Code is structured in three function.</p>
                     <div>
                         <h5>function getValues()</h5>
-                    <p>This function retrieves the values from the HTML page. It then varifies that they are numbers and not arrays. Once confirmed, the numbers are then passed to the next function.</p>
+                    <p>This function retrieves the input values from the UI using custom ID tags. It then varifies that they are numbers and not strings. Once confirmed, the numbers are then passed to the next function. If a string has been enetred, it will produce an error message to the user.</p>
                     </div>
                     <div>
                         <h5>function generateNumbers()</h5>
