--- a/app.html
+++ b/app.html
@@ -16,7 +16,8 @@
     <!--Orelega One-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
+</head>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -61,32 +62,28 @@
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a
                         program that displays numbers from 1 to 100. Display the even numbers in</h4>
                     <h2 class="mt-5 border-bottom border-2">Instructions</h2>
-                    <p>Enter a starting value and an ending value. Press the button and the numbers will appear.</p>
+                    <p>There and back again. A javascript coding exercise using arrays. Write a program that displays a string in reverse.</p>
                 </div>
                 <div class="col col-lg-8">
                     <div>
-                        <h5>Enter Values</h5>
+                        <h5>Enter A String To Reverse</h5>
                         <form class="row gy-2 gx-3">
                             <div class="col">
-                                <input id="startValue" type="number" class="form-control" placeholder="Start Value"
-                                    value=0 aria-label="Start Value">
+                                <input id="userString" type="text" class="form-control" placeholder="Enter A String"
+                                    aria-label="Enter A String"></input>
                             </div>
-                            <div class="col">
-                                <input id="endValue" type="number" class="form-control" placeholder="End Value"
-                                value=100 aria-label="End Value">
+                            <div class="col-12">
+                                <button type="button" id="submit" class="btn btn-danger">Reverse Me</button>
                             </div>
-                            <div class="col-12 d-flex justify-content-start justify-content-lg-end">
-                                <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Go</button>
+                            <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                                <h4 class="alert-heading">Well Done!</h4>
+                                <hr>
+                                <p class="mb-0" id="msg">
+                                    <!--Insert a msg here-->
+                                </p>
                             </div>
                         </form>
-                        <h2 class="mt-5 border-bottom border-2">Results</h2>
-                        <div class="table-responsive">
-                            <table class="table table-striped table-sm">
-                                <tbody id="results">
-                                    <!--Results Go Here-->
-                                </tbody>
-                            </table>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -109,13 +106,16 @@
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
                         <div class="col social">
-                            <a href="https://www.linkedin.com/in/riley-macneill-8080b196/" target="_blank"><i class="fab fa-linkedin fab-2x"></i></a>
+                            <a href="https://www.linkedin.com/in/riley-macneill-8080b196/" target="_blank"><i
+                                    class="fab fa-linkedin fab-2x"></i></a>
                         </div>
                         <div class="col social">
-                            <a href="https://github.com/rileymacneill" target="_blank"><i class="fab fa-github fab-2x"></i></a>
+                            <a href="https://github.com/rileymacneill" target="_blank"><i
+                                    class="fab fa-github fab-2x"></i></a>
                         </div>
                         <div class="col social">
-                            <a href="https://twitter.com/riley_macneill" target="_blank"><i class="fab fa-twitter fab-2x"></i></a>
+                            <a href="https://twitter.com/riley_macneill" target="_blank"><i
+                                    class="fab fa-twitter fab-2x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
     </script>
     <script src="/js/site.js"></script>
     <script>
-        document.getElementById("btnSubmit").addEventListener("click",getValues);
+        document.getElementById("submit").addEventListener("click", getValue);
     </script>
 </body>
 
